4.0/_sources/auxfiletools.rst.txt
.. |Auxfiler.get| replace:: :func:`~hydpy.core.auxfiletools.Auxfiler.get`
.. |Auxfiler.remove_models| replace:: :func:`~hydpy.core.auxfiletools.Auxfiler.remove_models`
.. |Auxfiler| replace:: :class:`~hydpy.core.auxfiletools.Auxfiler`
.. |ControlManager| replace:: :class:`~hydpy.core.filetools.ControlManager`
.. |FileManager.currentpath| replace:: :const:`~hydpy.core.filetools.FileManager.currentpath`
.. |KeywordArguments.subset_of| replace:: :func:`~hydpy.core.parametertools.KeywordArguments.subset_of`
.. |KeywordArguments| replace:: :class:`~hydpy.core.parametertools.KeywordArguments`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |None| replace:: :const:`None`
.. |Open| replace:: :class:`~hydpy.core.testtools.Open`
.. |Parameter.keywordarguments| replace:: :const:`~hydpy.core.parametertools.Parameter.keywordarguments`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |SubAuxfiler.add_parameters| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.add_parameters`
.. |SubAuxfiler.add_parameter| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.add_parameter`
.. |SubAuxfiler.get_filenames| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_filenames`
.. |SubAuxfiler.get_filename| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_filename`
.. |SubAuxfiler.get_parameterstrings| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_parameterstrings`
.. |SubAuxfiler.get_parametertypes| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_parametertypes`
.. |SubAuxfiler.get_references| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_references`
.. |SubAuxfiler| replace:: :class:`~hydpy.core.auxfiletools.SubAuxfiler`
.. |ZipParameter| replace:: :class:`~hydpy.core.parametertools.ZipParameter`
.. |auxfiletools| replace:: :mod:`~hydpy.core.auxfiletools`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland_v2| replace:: :mod:`~hydpy.models.lland_v2`
.. |lstream_v001| replace:: :mod:`~hydpy.models.lstream_v001`
.. |property| replace:: :class:`property`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |selectiontools| replace:: :mod:`~hydpy.core.selectiontools`
.. |str| replace:: :class:`str`
.. |tuple| replace:: :class:`tuple`
.. |lland_constants.ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |lland_control.EQB| replace:: :class:`~hydpy.models.lland.lland_control.EQB`
.. |lland_control.EQD1| replace:: :class:`~hydpy.models.lland.lland_control.EQD1`
.. |lland_control.EQD2| replace:: :class:`~hydpy.models.lland.lland_control.EQD2`
.. |lland_control.EQI1| replace:: :class:`~hydpy.models.lland.lland_control.EQI1`
.. |lland_control.EQI2| replace:: :class:`~hydpy.models.lland.lland_control.EQI2`
.. |lland_control.TRefT| replace:: :class:`~hydpy.models.lland.lland_control.TRefT`

.. _auxfiletools:

auxfiletools
============

.. automodule:: hydpy.core.auxfiletools
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs
