5.0/_sources/auxfiletools.rst.txt
.. |Auxfiler.get| replace:: :func:`~hydpy.core.auxfiletools.Auxfiler.get`
.. |Auxfiler.remove_models| replace:: :func:`~hydpy.core.auxfiletools.Auxfiler.remove_models`
.. |Auxfiler| replace:: :class:`~hydpy.core.auxfiletools.Auxfiler`
.. |ControlManager| replace:: :class:`~hydpy.core.filetools.ControlManager`
.. |FileManager.currentpath| replace:: :const:`~hydpy.core.filetools.FileManager.currentpath`
.. |KeywordArguments.subset_of| replace:: :func:`~hydpy.core.parametertools.KeywordArguments.subset_of`
.. |KeywordArguments| replace:: :class:`~hydpy.core.parametertools.KeywordArguments`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |None| replace:: :const:`None`
.. |Open| replace:: :class:`~hydpy.core.testtools.Open`
.. |Parameter.keywordarguments| replace:: :const:`~hydpy.core.parametertools.Parameter.keywordarguments`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |SubAuxfiler.add_parameters| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.add_parameters`
.. |SubAuxfiler.add_parameter| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.add_parameter`
.. |SubAuxfiler.get_filenames| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_filenames`
.. |SubAuxfiler.get_filename| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_filename`
.. |SubAuxfiler.get_parameterstrings| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_parameterstrings`
.. |SubAuxfiler.get_parametertypes| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_parametertypes`
.. |SubAuxfiler.get_references| replace:: :func:`~hydpy.core.auxfiletools.SubAuxfiler.get_references`
.. |SubAuxfiler| replace:: :class:`~hydpy.core.auxfiletools.SubAuxfiler`
.. |ZipParameter| replace:: :class:`~hydpy.core.parametertools.ZipParameter`
.. |auxfiletools| replace:: :mod:`~hydpy.core.auxfiletools`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland_v2| replace:: :mod:`~hydpy.models.lland_v2`
.. |lstream_v001| replace:: :mod:`~hydpy.models.lstream_v001`
.. |property| replace:: :class:`property`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |selectiontools| replace:: :mod:`~hydpy.core.selectiontools`
.. |str| replace:: :class:`str`
.. |tuple| replace:: :class:`tuple`
.. |lland_constants.ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |lland_control.EQB| replace:: :class:`~hydpy.models.lland.lland_control.EQB`
.. |lland_control.EQD1| replace:: :class:`~hydpy.models.lland.lland_control.EQD1`
.. |lland_control.EQD2| replace:: :class:`~hydpy.models.lland.lland_control.EQD2`
.. |lland_control.EQI1| replace:: :class:`~hydpy.models.lland.lland_control.EQI1`
.. |lland_control.EQI2| replace:: :class:`~hydpy.models.lland.lland_control.EQI2`
.. |lland_control.TRefT| replace:: :class:`~hydpy.models.lland.lland_control.TRefT`

.. _auxfiletools:

auxfiletools
============

.. automodule:: hydpy.core.auxfiletools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
